--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,10 @@
     <div>
       <a href="">Block</a>
     </div>
+    <div>
+      <h1>Headline</h1>
+    </div>
+    <button type="button" id="toggle">off mouse</button>
     <script src="bundle.js"></script>
   </body>
 </html>
