--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,17 @@
     <style>
       html,
       body {
+        width: 100%;
         height: 100%;
       }
       body {
         margin: 0;
         padding: 0;
+      }
+
+      html {
+        position: fixed;
+        overflow: hidden;
       }
 
       * {
@@ -59,16 +65,32 @@
         stroke-dasharray: 180;
         stroke-dashoffset: 180;
       }
+      .circle-loader {
+        position: absolute;
+        transform: translate3d(-50%, -50%, 0);
+      }
+      .circle-loader__inner {
+        background-color: black;
+        width: 0;
+        height: 0;
+        border-radius: 50%;
+      }
+      .flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 4rem;
+      }
     </style>
   </head>
   <body>
-    <div>
-      <a href="">Block</a>
+    <div class='flex'>
+      <a href="link-1.html">Link to 1</a>
+      <a href="link-2.html">Link to 2</a>
     </div>
-    <div>
-      <h1>Headline</h1>
-    </div>
-    <button type="button" id="toggle">off mouse</button>
+    <main data-router-wrapper>
+      <article data-router-view="name"></article>
+    </main>
     <script src="bundle.js"></script>
   </body>
 </html>
